Fixes for Windows

--- a/java-jna/CMakeLists.txt
+++ b/java-jna/CMakeLists.txt
@@ -2,6 +2,14 @@
 # (JNA doesn't really do C++)
 INCLUDE_DIRECTORIES("${CPPLIB_INCLUDE_DIR}")
 ADD_LIBRARY(cpplib_shared SHARED c/c_wrapper.cpp)
+SET_TARGET_PROPERTIES(
+    cpplib_shared PROPERTIES
+    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}"
+    LIBRARY_OUTPUT_DIRECTORY_DEBUG "${CMAKE_CURRENT_BINARY_DIR}"
+    LIBRARY_OUTPUT_DIRECTORY_RELEASE "${CMAKE_CURRENT_BINARY_DIR}"
+    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}"
+    RUNTIME_OUTPUT_DIRECTORY_DEBUG "${CMAKE_CURRENT_BINARY_DIR}"
+    RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_CURRENT_BINARY_DIR}")
 TARGET_LINK_LIBRARIES(cpplib_shared cpplib)
 
 # Require Java
