--- a/java-jni/CMakeLists.txt
+++ b/java-jni/CMakeLists.txt
@@ -48,6 +48,14 @@ INCLUDE_DIRECTORIES("${CPPLIB_INCLUDE_DIR}"
                     "${CMAKE_CURRENT_BINARY_DIR}/include"
                     ${JNI_INCLUDE_DIRS})
 ADD_LIBRARY(cpplib_jni SHARED c/jni_wrapper.cpp)
+SET_TARGET_PROPERTIES(
+    cpplib_jni PROPERTIES
+    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}"
+    LIBRARY_OUTPUT_DIRECTORY_DEBUG "${CMAKE_CURRENT_BINARY_DIR}"
+    LIBRARY_OUTPUT_DIRECTORY_RELEASE "${CMAKE_CURRENT_BINARY_DIR}"
+    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}"
+    RUNTIME_OUTPUT_DIRECTORY_DEBUG "${CMAKE_CURRENT_BINARY_DIR}"
+    RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_CURRENT_BINARY_DIR}")
 TARGET_LINK_LIBRARIES(cpplib_jni cpplib)
 ADD_DEPENDENCIES(cpplib_jni JavaJNIHeaders)
 
