--- a/java-swig/CMakeLists.txt
+++ b/java-swig/CMakeLists.txt
@@ -13,6 +13,14 @@ SET(CMAKE_SWIG_OUTDIR "${CMAKE_CURRENT_BINARY_DIR}/java/src/edu/nyu/cpptest/cppl
 SET(CMAKE_SWIG_FLAGS -package edu.nyu.cpptest.cpplib)
 SET_SOURCE_FILES_PROPERTIES(swig/cpplib.i PROPERTIES CPLUSPLUS ON)
 SWIG_ADD_MODULE(cpplib_swig java swig/cpplib.i)
+SET_TARGET_PROPERTIES(
+    "${SWIG_MODULE_cpplib_swig_REAL_NAME}" PROPERTIES
+    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}"
+    LIBRARY_OUTPUT_DIRECTORY_DEBUG "${CMAKE_CURRENT_BINARY_DIR}"
+    LIBRARY_OUTPUT_DIRECTORY_RELEASE "${CMAKE_CURRENT_BINARY_DIR}"
+    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}"
+    RUNTIME_OUTPUT_DIRECTORY_DEBUG "${CMAKE_CURRENT_BINARY_DIR}"
+    RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_CURRENT_BINARY_DIR}")
 SWIG_LINK_LIBRARIES(cpplib_swig cpplib)
 
 # Require Java
