--- a/java-swig/CMakeLists.txt
+++ b/java-swig/CMakeLists.txt
@@ -22,6 +22,8 @@ SET_TARGET_PROPERTIES(
     RUNTIME_OUTPUT_DIRECTORY_DEBUG "${CMAKE_CURRENT_BINARY_DIR}"
     RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_CURRENT_BINARY_DIR}")
 SWIG_LINK_LIBRARIES(cpplib_swig cpplib)
+# Mac OS needs this
+FILE(MAKE_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/swig")
 
 # Require Java
 FIND_PACKAGE(Java COMPONENTS Development)
