Adds tests with ctest

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,11 +3,14 @@ set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake/Modules/" ${CMAKE_MODUL
 set(CMAKE_CXX_FLAGS "-Wall")
 PROJECT(java-cpp)
 
+# Testing
+OPTION(BUILD_TESTS "Build the test suite (requires CppUnit)" OFF)
+IF(BUILD_TESTS)
+    ENABLE_TESTING()
+ENDIF()
+
 # Recursively build components
 ADD_SUBDIRECTORY(cpplib)
 ADD_SUBDIRECTORY(java-swig)
 ADD_SUBDIRECTORY(java-jna)
 ADD_SUBDIRECTORY(java-jni)
-
-# Testing
-OPTION(BUILD_TESTSUITE "Build the test suite (requires CppUnit)" OFF)
